// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error 1`] = `
<div
  className="container"
>
  <StationHeader
    direction="Richmond"
    stationName="Waterloo"
    transportType="bus"
  />
  <ErrorMessage
    message="Unable to load data"
  />
</div>
`;

exports[`loaded 1`] = `
<div
  className="container"
>
  <StationHeader
    direction="Richmond"
    stationName="Waterloo"
    transportType="bus"
  />
  <ArrivalTimeTable
    arrivals={
      Array [
        Object {
          "destinationName": "Waterloo",
          "expectedSeconds": 60,
          "lineName": "10",
        },
        Object {
          "destinationName": "Waterloo",
          "expectedSeconds": 90,
          "lineName": "10",
        },
        Object {
          "destinationName": "Waterloo",
          "expectedSeconds": 30,
          "lineName": "20",
        },
      ]
    }
  />
</div>
`;

exports[`loading 1`] = `
<div
  className="container"
>
  <StationHeader
    direction="Richmond"
    stationName="Waterloo"
    transportType="bus"
  />
  <Loading />
</div>
`;
